# Snake-sfml

./: CMakeLists.txt  highscore.txt  main.cpp
cmake_modules/: FindSFML.cmake
